CSS/Chars::Page: Fix alignment of romanization of spoiler names
Fixes https://vndb.org/t24112.5

--- a/css/v2.css
+++ b/css/v2.css
@@ -620,7 +620,7 @@ div.chardetails {
     &.charsep     { margin-top: 30px }
     > table       { float: left; width: 525px; }
     td.key        { width: 106px; }
-    .names td     { padding: 0 5px }
+    .names td     { padding: 0 5px; vertical-align: bottom }
     .names td:first-child { padding-left: 0 }
     .lie          { text-decoration: line-through }
 }
